--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     
                     EDUCATION</h1>
 
-                <img src="./index_files/IMG_20230727_111301341~2.jpg" width="250px">
+                <img src="IMG_20230727_111301341~2.jpg" width="250px">
             
  
                 <pre>                    <i>VEERMATA JIJABAI TECHNOLOGICAL INSTITUTE: B.TECH in COMPUTER SCICENCE</i>
